--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["php82", "php82Extensions.mysqli", "php82Extensions.pdo_mysql", "php82Extensions.gd", "php82Extensions.zip", "php82Extensions.fileinfo"]
+nixPkgs = ["php83", "php83Extensions.mysqli", "php83Extensions.pdo_mysql", "php83Extensions.gd", "php83Extensions.zip", "php83Extensions.fileinfo", "php83Extensions.mbstring"]
 
 [phases.build]
-cmds = ["mkdir -p /app/file_storage", "mkdir -p /app/logs"]
+cmds = ["mkdir -p file_storage", "mkdir -p logs", "chmod -R 777 file_storage", "chmod -R 777 logs"]
 
 [start]
-cmd = "php -S 0.0.0.0:${PORT:-8080} -t ."
+cmd = "php -S 0.0.0.0:$PORT"
